--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -16,12 +14,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-h1 {
+
+.center {
+    text-align: center;
     color: pink; /* Pink color for the title */
     font-size: 24px; /* Adjust font size as needed */
     margin-bottom: 20px; /* Add some bottom margin */
 }
-
 
 .options {
     display: flex;
@@ -40,14 +39,6 @@ button {
 
 button:hover {
     background-color: #ddd;
-}
-
-#noButton {
-    order: 0; /* Default order */
-}
-
-#noButton.clicked {
-    order: -1; /* Move to the beginning */
 }
 
 #response {
